<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onFile"
            android:padding="1dp"
            android:text="@string/tittle_file" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onPaste"
            android:padding="1dp"
            android:text="@string/tittle_paste" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onEdit"
            android:padding="1dp"
            android:text="@string/tittle_edit" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onMirar"
            android:text="@string/tittle_view" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="horizontal"
        android:padding="5dp" >

        <EditText
            android:id="@+id/tab"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top|left"
            android:hint="@string/hint"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:scrollHorizontally="false"
            android:text="@string/example" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onReset"
            android:text="@string/tittle_original"
            android:textSize="9sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:onClick="onNew"
                android:text="@string/tittle_halftone" />

            <TextView
                android:id="@+id/pitch"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:onClick="onNew"
                android:text="@string/tittle_original" />

            <TextView
                android:id="@+id/note_original"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="A#"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:onClick="onNew"
                android:text="@string/tittle_actual" />

            <TextView
                android:id="@+id/note_actual"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="B"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onLess"
            android:padding="1dp"
            android:text="@string/less" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onMore"
            android:padding="1dp"
            android:text="@string/more" />
    </LinearLayout>

</LinearLayout>